# ChangeLog for sci-biology/mira
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> -mira-3.4.0.1.ebuild,
  -mira-3.4.1.1.ebuild, -mira-3.9.9.ebuild, -mira-3.9.15.ebuild,
  -mira-4.0_rc2.ebuild, mira-4.0_rc4.ebuild:
  Drop old; punt base.eclass

  12 Nov 2013; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  mira-3.4.0.1.ebuild, mira-3.4.1.1.ebuild, mira-3.9.9.ebuild,
  mira-3.9.15.ebuild, mira-4.0_rc2.ebuild, +mira-4.0_rc4.ebuild:
  Added 4.0_rc4 release candidate. Removing the sed hack redirecting autoconf
  to config/m4/ instead of m4/ because upstream accepted that source tree
  layout change in _rc3 already.


  01 Oct 2013; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  mira-4.0_rc2.ebuild:
  Improve ebuild to use MY_PV.

  25 Sep 2013; Justin Lecher <jlec@gentoo.org> mira-4.0_rc2.ebuild,
  metadata.xml:
  Fix m4 macrodir location

*mira-3.9.15 (30 Apr 2013)

  30 Apr 2013; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +mira-3.9.15.ebuild:
  sci-biology/mira-3.9.15: bump to current besta version mira-3.9.15.ebuild

*mira-3.4.1.1 (22 Feb 2013)
*mira-3.9.9 (22 Feb 2013)

  22 Feb 2013; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +files/mira-3.4.0.2-boost-1.50.patch, +mira-3.4.1.1.ebuild,
  +mira-3.9.9.ebuild:
  sci-biology/mira: current stable and development version bumps

  22 May 2012; Justin Lecher <jlec@gentoo.org> -mira-3.2.1-r2.ebuild,
  -mira-3.2.1.17-r1.ebuild, -mira-3.2.1.20.ebuild, mira-3.4.0.1.ebuild:
  Add missing eutils.eclass, bump to EAPI=4, remove usage of base.eclass; drop
  old

*mira-3.4.0.1 (08 Dec 2011)

  08 Dec 2011; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +mira-3.4.0.1.ebuild, +files/mira-3.4.0.1-asneeded.patch:
  version bump and dropped the expat patch for --as-needed CFLAGS as upstream
  fixed that in a different way, the still applicable part of the patch is
  however provided under files/ but is just a cosmetic change (hence not really