@@ -1,2 +1,3 @@
+DIST mira-4.0.1.tar.bz2 10367895 SHA256 7e38feea1b6313068f6bc26cdeb3e43238d706bbf15204468efae20f136da038 SHA512 222afb48fabd563a2d77ffa6c67f3911e35f8cb028d0e21894689ab5ca250563b686b298bad313caaa6c41ca0b3beff825262867dcf0ae15dfb40d208c2aa89a WHIRLPOOL 7e8a39486cc4014d6754ff819e94bb56219e39598f1981eb15e8142b4f40bcc7ce38b47511001c48c32bb276ce7063a1b0de535bd6709498bd1d1fcd735630f5
 DIST mira-4.0rc4.tar.bz2 10418692 SHA256 5149e25462625be98a18945921e17bb3c9bef110d820af295c7473a44acf09b4 SHA512 9ada6abaf36993e8738cd8fbe7ec710e0672335afc83902fd962fe9c0c430dae80df64f272bfbb1b4d132cb080e93ed791eaf8a7652b22e5e6e816466fe3eb5b WHIRLPOOL f2d605f2ad7985f60038ed93d4c1d45b6b60c97552588ac1daae449f8ee503691c0ef79d52df75bd9241cdc888a107df2801d31c9e6c9b8e3c6f3c561910c09f
 DIST mira_3rdparty_06-07-2012.tar.bz2 31656 SHA256 53cbbb9d57e2fa51706b3f1d055621c0863091542b8851f3ce8a45850951d7d2 SHA512 4d4dbdf7ab5126f9d47160bee8bc127b6a225de8087f6b9914c754324a74d966333207c86a3f38cf0ea9f91408707e2a24086dbe1318fdfa2870b0c39bc5033b WHIRLPOOL c9946ddc032d6864a33e7a60a4d1a515262ca2204535c7d81dcc73144b4f471f766007082d1912fc4ca219a9cbb4ac5a485451c625a7ffcc1949fb8574a3f3d2
