@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mira-4.0.1 (12 Apr 2014)
+
+  12 Apr 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +mira-4.0.1.ebuild:
+  sci-biology/mira-4.0.1: bump to current recommended bugfix release
+
   06 Jan 2014; Justin Lecher <jlec@gentoo.org> -mira-3.4.0.1.ebuild,
   -mira-3.4.1.1.ebuild, -mira-3.9.9.ebuild, -mira-3.9.15.ebuild,
   -mira-4.0_rc2.ebuild, mira-4.0_rc4.ebuild:
